# room-world

./: Cargo.toml  design_doc.md
src/: debug_plugin.rs  gui_plugin.rs  main.rs  player_plugin.rs
src/assets/: dialog_test.ron
src/mechanics/: dialog.rs  interact.rs  interact_mechanic.rs  mod.rs
